set up jest and implement tests for ThemeProvider with 100% coverage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"],
-      "@/layout/*": ["components/layout/*"]
+      "@layout/*": ["components/layout/*"]
     }
   },
   "files": [],
