--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,7 +12,7 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"],
-      "@/layout/*": ["components/layout/*"]
+      "@layout/*": ["components/layout/*"]
     },
 
     /* Bundler mode */
