--- a/.github/workflows/mr-coverage-check.yml
+++ b/.github/workflows/mr-coverage-check.yml
@@ -59,10 +59,11 @@ jobs:
         id: coverage-summary
         run: |
           node -e "
-          const summary = require('./coverage/coverage-summary.json').total;
-          for (const key in summary) {
-            console.log(`${key}=${summary[key].pct}`);
-          }" >> $GITHUB_OUTPUT
+            const summary = require('./coverage/coverage-summary.json').total;
+            for (const key in summary) {
+              console.log(`\${key}=\${summary[key].pct}`);
+            }
+          " >> $GITHUB_OUTPUT
 
       - name: Comment PR with coverage results
         uses: actions/github-script@v7
