--- a/.github/workflows/mr-coverage-check.yml
+++ b/.github/workflows/mr-coverage-check.yml
@@ -58,12 +58,13 @@ jobs:
       - name: Parse coverage summary
         id: coverage-summary
         run: |
-          node -e "
-            const summary = require('./coverage/coverage-summary.json').total;
-            for (const key in summary) {
-              console.log(`\${key}=\${summary[key].pct}`);
-            }
-          " >> $GITHUB_OUTPUT
+          node <<'EOF'
+          const fs = require('fs');
+          const summary = require('./coverage/coverage-summary.json').total;
+          for (const key in summary) {
+            console.log(`${key}=${summary[key].pct}`);
+          }
+          EOF >> $GITHUB_OUTPUT
 
       - name: Comment PR with coverage results
         uses: actions/github-script@v7
