--- a/.github/workflows/mr-coverage-check.yml
+++ b/.github/workflows/mr-coverage-check.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
           cache: "pnpm"
           cache-dependency-path: pnpm-lock.yaml
 
@@ -58,13 +58,13 @@ jobs:
       - name: Parse coverage summary
         id: coverage-summary
         run: |
-          node <<'EOF'
+          node <<'EOF' >> $GITHUB_OUTPUT
           const fs = require('fs');
           const summary = require('./coverage/coverage-summary.json').total;
           for (const key in summary) {
             console.log(`${key}=${summary[key].pct}`);
           }
-          EOF >> $GITHUB_OUTPUT
+          EOF
 
       - name: Comment PR with coverage results
         uses: actions/github-script@v7
