established foundationale page structure and Section layout component

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,7 +12,9 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"],
-      "@layout/*": ["components/layout/*"]
+      "@layout/*": ["components/layout/*"],
+      "@sections/*": ["sections/*"],
+      "@contexts/*": ["contexts/*"]
     },
 
     /* Bundler mode */
