--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:coverage:watch": "jest --coverage --watch",
-    "test:staged": "jest --findRelatedTests --coverage=true",
+    "test:staged": "node src/config/test-staged.js",
     "prepare": "husky"
   },
   "dependencies": {
