--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": [
       "eslint",
-      "pnpm run test:staged"
+      "pnpm run test:staged --silent=false"
     ]
   }
 }
