Created navBar, including logo, navLinks with Burger Menu for smaller screen, and theme toggle button with animation

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,9 @@
       "@/*": ["*"],
       "@layout/*": ["components/layout/*"],
       "@sections/*": ["sections/*"],
-      "@contexts/*": ["contexts/*"]
+      "@contexts/*": ["contexts/*"],
+      "@data/*": ["data/*"],
+      "@hooks/*": ["hooks/*"]
     },
 
     /* Bundler mode */
