--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
       "@/*": ["*"],
       "@layout/*": ["components/layout/*"],
       "@sections/*": ["sections/*"],
-      "@contexts/*": ["contexts/*"]
+      "@contexts/*": ["contexts/*"],
+      "@data/*": ["data/*"],
+      "@hooks/*": ["hooks/*"]
     }
   },
   "files": [],
