--- a/.github/workflows/vercel-builds.yml
+++ b/.github/workflows/vercel-builds.yml
@@ -15,6 +15,10 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      deployments: write
 
     steps:
       - name: Checkout repository
