implemented hero component, including tests, and made some minor updates so a more consistent testing structure

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,7 +16,8 @@
       "@sections/*": ["sections/*"],
       "@contexts/*": ["contexts/*"],
       "@data/*": ["data/*"],
-      "@hooks/*": ["hooks/*"]
+      "@hooks/*": ["hooks/*"],
+      "@shared/*": ["components/shared/*"]
     },
 
     /* Bundler mode */
