--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@sections/*": ["sections/*"],
       "@contexts/*": ["contexts/*"],
       "@data/*": ["data/*"],
-      "@hooks/*": ["hooks/*"]
+      "@hooks/*": ["hooks/*"],
+      "@shared/*": ["components/shared/*"]
     }
   },
   "files": [],
