added about section content, including reusable card and pill component, as section specific flip cards

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "clsx": "^2.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
