--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,7 +17,9 @@
       "@contexts/*": ["contexts/*"],
       "@data/*": ["data/*"],
       "@hooks/*": ["hooks/*"],
-      "@shared/*": ["components/shared/*"]
+      "@shared/*": ["components/shared/*"],
+      "@ui/*": ["components/ui/*"],
+      "@utils/*": ["utils/*"]
     },
 
     /* Bundler mode */
