implemented contact Resend API and injected it into ContactForm. Added optional Subject field for ContactForm, and whitespace filler for ContactLinks card. Updated config files to cover new api folder

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "ES2022",
+    "target": "ES2023",
     "useDefineForClassFields": true,
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "lib": ["ES2023", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "types": ["vite/client"],
+    "types": ["node", "vite/client", "jest"],
     "skipLibCheck": true,
 
     /* Path mapping */
@@ -38,5 +38,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "tailwindcss.config.ts"]
+  "include": ["src", "tailwindcss.config.ts", "api"]
 }
