--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint-staged": "^16.2.7",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
@@ -31,8 +32,10 @@
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@vercel/node": "^5.5.16",
     "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -45,6 +48,7 @@
     "ts-jest": "^29.4.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.50.1",
+    "vercel": "^50.1.3",
     "vite": "^7.3.0"
   },
   "lint-staged": {
