--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
-    "@vercel/kv": "^3.0.0",
+    "@upstash/redis": "^1.36.0",
     "clsx": "^2.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
