--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@upstash/redis": "^1.36.0",
+    "@vercel/analytics": "^1.6.1",
     "clsx": "^2.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
