final review before public reveal. Adjusted project card image to avoid stretch. moved icons file into appropriate location. updated readme and added license file

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,7 +19,8 @@
       "@hooks/*": ["hooks/*"],
       "@shared/*": ["components/shared/*"],
       "@ui/*": ["components/ui/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@assets/*": ["assets/*"]
     },
 
     /* Bundler mode */
