--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@hooks/*": ["hooks/*"],
       "@shared/*": ["components/shared/*"],
       "@ui/*": ["components/ui/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@assets/*": ["assets/*"]
     },
     "types": ["node", "vite/client", "jest"]
   },
