--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
       "@utils/*": ["utils/*"],
       "@assets/*": ["assets/*"]
     },
-    "types": ["node", "vite/client", "jest"]
+    "types": ["node", "vite/client", "jest"],
+    "noEmit": true,
+    "allowImportingTsExtensions": true
   },
   "files": [],
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }]
