--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "@shared/*": ["components/shared/*"],
       "@ui/*": ["components/ui/*"],
       "@utils/*": ["utils/*"],
-      "@assets/*": ["assets/*"]
+      "@assets/*": ["assets/*"],
+      "@lib/*": ["../lib/*"]
     },
     "types": ["node", "vite/client", "jest"],
     "noEmit": true,
