updated tsconfig include path for whole lib folder in case of more files in future

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -40,5 +40,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "tailwindcss.config.ts", "api", "lib/formUtils.ts"]
+  "include": ["src", "tailwindcss.config.ts", "api", "lib"]
 }
