moved formUtil directly into contact file as well in order to avoid bundle issue

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,8 +20,7 @@
       "@shared/*": ["components/shared/*"],
       "@ui/*": ["components/ui/*"],
       "@utils/*": ["utils/*"],
-      "@assets/*": ["assets/*"],
-      "@lib/*": ["../lib/*"]
+      "@assets/*": ["assets/*"]
     },
 
     /* Bundler mode */
