--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
       "@shared/*": ["components/shared/*"],
       "@ui/*": ["components/ui/*"],
       "@utils/*": ["utils/*"],
-      "@assets/*": ["assets/*"],
-      "@lib/*": ["../lib/*"]
+      "@assets/*": ["assets/*"]
     },
     "types": ["node", "vite/client", "jest"],
     "noEmit": true,
