--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -39,5 +39,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "tailwindcss.config.ts", "api", "lib"]
+  "include": ["src", "tailwindcss.config.ts", "api"]
 }
